# upsc-mains-guruji

./: index.html  main.3472958e00338139.js  polyfills.2c3e404626cc62db.js  runtime.bf0b7bfe9b4aa3c2.js  styles.34bc048d3ccba201.css
api/: dockerfile  main.py  pyproject.toml
api/app/: main.py
api/app/api/: routes.py
api/app/config/: newspapers.py
api/app/core/: logger.py
api/app/db/: solved_question.py
api/app/schema/: model_output.py  user_input.py
api/app/src/: model.py
api/app/test/: test.ipynb
backend/: package-lock.json  package.json  server.js
backend/src/controllers/: editorial.controller.js
backend/src/routes/: editorial.routes.js
backend/src/services/: editorial.service.js
backend/src/utils/: validators.js
web/: .gitignore  angular.json  package-lock.json  package.json  tsconfig.json
web/src/: index.html  styles.scss
web/src/app/: app-routing.module.ts  app.component.ts  app.module.ts
web/src/app/components/answer-viewer/: answer-viewer.component.spec.ts  answer-viewer.component.ts
web/src/app/components/editorial-processor/: editorial-processor.component.html  editorial-processor.component.scss  editorial-processor.component.spec.ts  editorial-processor.component.ts
web/src/app/components/header/: header.component.ts
web/src/app/components/loading-spinner/: loading-spinner.component.scss  loading-spinner.component.ts
web/src/app/components/question-list/: question-list.component.html  (+2 more)
web/src/app/services/: editorial.service.ts  notification.service.ts
web/src/environments/: environment.prod.ts  environment.ts
